--- a/11-homework/style.css
+++ b/11-homework/style.css
@@ -29,6 +29,11 @@ body {
   border: 4px solid #3ba7fa;
   border-radius: 10px;
 }
+
+.button:hover {
+  cursor: pointer;
+}
+
 .button.active {
   transform: scale(1.1);
   border-color: #ffc600;
