--- a/13-homework/style.css
+++ b/13-homework/style.css
@@ -47,14 +47,14 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 20px;
-  width: 160px;
+  width: 80px;
   height: 80px;
   font-size: 30px;
   color: #fff;
   background-color: rgba(14, 93, 158, 0.5);
   border: 4px solid #3ba7fa;
   border-radius: 10px;
-  padding-left: 60px;
+  padding-left: 25px;
 }
 
 .cards {
@@ -130,9 +130,11 @@ img {
   display: flex;
 }
 
-.button__next {
+.button__next,
+.button__prev {
   width: 160px;
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 #planets {
