--- a/react07/my-app/src/App.css
+++ b/react07/my-app/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*.App {*/
+/*  text-align: center;*/
+/*}*/
+.header {
+  padding: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  background-color: dodgerblue;
+}
+.nav li {
+  display: inline-block;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  padding: 10px;
+  height: 37px;
+  margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+  padding: 20px;
+  -webkit-box-shadow: 1px 10px 10px -1px rgba(0, 0, 0, 0.34);
+  -moz-box-shadow: 1px 10px 10px -1px rgba(0, 0, 0, 0.34);
+  box-shadow: 1px 10px 10px -1px rgba(0, 0, 0, 0.34);
 }
